...
                android:layout_width="192dp"
                android:layout_height="192dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/products_details_dialog_product_image" />

            <CheckBox
                android:id="@+id/cb_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_star_selector"
                android:layout_margin="8dp"
                />
        </RelativeLayout>
...
        <TextView
            android:id="@+id/product_key_name"
            style="@style/product_key"
            android:text="@string/product_key_name" />

        <TextView
            android:id="@+id/product_value_name"
            style="@style/product_value"
            android:text="@string/product_value_def" />

        <TextView
            android:id="@+id/product_key_tags"
            style="@style/product_key"
...
